--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
 </style>
 
 <div id="app"></div>
-<script src="js/bundle.min.js"></script>
+
+<script src="js/vendor.bundle.js"></script>
+<script src="js/js.bundle.js"></script>
 
 </html>
